--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h4{
 }
 
 a {
-  color: #0BA9F9;
+  color: #000;
   -webkit-transition: color 300ms, background-color 300ms;
   -moz-transition: color 300ms, background-color 300ms;
   -o-transition:  color 300ms, background-color 300ms;
